--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@tailwindcss/line-clamp": "^0.2.1",
     "@tailwindui/react": "^0.1.1",
     "next": "11.1.2",
+    "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/nprogress": "^0.2.0",
     "@types/react": "17.0.20",
     "autoprefixer": "^10.3.4",
     "eslint": "7.32.0",
